--- a/GroupBoxRadioButton/MainWindow.xaml
+++ b/GroupBoxRadioButton/MainWindow.xaml
@@ -10,17 +10,24 @@
         <local:BoolToVisibilityConverter x:Key="boolToVisibilityConverter"/>
 
 
-        <Style TargetType="{x:Type ToggleButton}" x:Key="ankietaBTN">
+        <!--<Style TargetType="{x:Type ToggleButton}" x:Key="ankietaBTN">
             <Setter Property="Background" Value="Crimson"/>
             <Setter Property="FontSize" Value="16"/>
             <Setter Property="Foreground" Value="White"/>
+        </Style>-->
+        <Style TargetType="{x:Type ToggleButton}">
+            <Setter Property="Content" Value="Pokaż ankietę"/>
+            <Style.Triggers>
+                <Trigger Property="IsChecked" Value="true">
+                    <Setter Property="Content" Value="Ukryj ankietę"/>
+                </Trigger>
+            </Style.Triggers>
         </Style>
-        
     </Window.Resources>
     <Grid>
         <StackPanel>
-            <ToggleButton x:Name="toggleAnkieta" IsChecked="{Binding ElementName=ankiety, Path=IsOpen}"  Content="Pokaż ankiete" Style="{StaticResource ankietaBTN}"/>
-            <ToggleButton Content="OK"/>
+            <ToggleButton x:Name="toggleAnkieta" IsChecked="{Binding ElementName=ankiety, Path=IsOpen}" />
+          
             <!--<Popup x:Name="ankiety" PopupAnimation="Slide"  AllowsTransparency="True" PlacementTarget="{Binding ElementName=toggleAnkieta}" >-->
             <StackPanel Visibility="{Binding ElementName=toggleAnkieta, Path=IsChecked, Converter={StaticResource boolToVisibilityConverter}}">
             <GroupBox Header="Ile godzin dziennie programujesz?">
